--- a/Write-Up.ipynb
+++ b/Write-Up.ipynb
@@ -21,6 +21,8 @@
     "[iSoft6]: ./SoftPredict5.png \"ImgSoft5\"\n",
     "[iSoft7]: ./SoftPredict6.png \"ImgSoft6\"\n",
     "[iSoft8]: ./SoftPredict0.png \"ImgSoft7\"\n",
+    "[image1]:./out_images/testImg.png\n",
+    "[image2]:./out_images/norImgOut.png\n",
     "\n",
     "\n",
     "**Data Set Summary & Exploration**\n",
@@ -156,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   },
   "widgets": {
    "state": {},
