correct images in README

--- a/Write-Up.ipynb
+++ b/Write-Up.ipynb
@@ -1,12 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting README.md\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile README.md\n",
     "**Traffic Sign Recognition-Project2-Report** \n",
     "\n",
     "\n",
@@ -23,6 +31,11 @@
     "[iSoft8]: ./SoftPredict0.png \"ImgSoft7\"\n",
     "[image1]:./out_images/testImg.png\n",
     "[image2]:./out_images/norImgOut.png\n",
+    "[iNorm]: ./normtest.png\n",
+    "[itrain]: ./train.png \n",
+    "[ivalidation]: ./validation.png \n",
+    "[itest]: ./test.png \n",
+    "[iHist]: ./class_histogram_plot.png \n",
     "\n",
     "\n",
     "**Data Set Summary & Exploration**\n",
@@ -35,27 +48,19 @@
     "* The shape of a traffic sign image is (32, 32, 3)\n",
     "* The number of unique classes/labels in the data set is 43\n",
     "\n",
-    "The images (train,validation,test) samples are presented below and the following chart shows the histogram of each class ID:\n",
-    "\n",
+    "The images (train,validation,test) samples are presented below and followed by a chart histogram of each class ID.\n",
     "\n",
     "![train sample][itrain]\n",
-    "\n",
     "![alt text][ivalidation]\n",
-    "\n",
     "![alt text][itest]\n",
-    "\n",
-    "![alt text][iHist] \n",
-    "[itrain]: ./train.png \n",
-    "[ivalidation]: ./validation.png \n",
-    "[itest]: ./test.png \n",
-    "[iHist]: ./class_histogram_plot.png \n",
+    "![alt text][iHist]\n",
     "\n",
     "**Design and Test a Model Architecture**\n",
     "\n",
     "Not many presprocerssing technioque was used as the only prerossessing was normalisation the test, train, valoidation set to reduce computation and big error when adding and multiplying the weights by using the follwing equation (X/122.5)-1 and the result as following:\n",
     "\n",
     "![alt text][iNorm] \n",
-    "[iNorm]: ./normtest.png\n",
+    "\n",
     "\n",
     "Note: converting to gary scale was attemted but not test as arised error says cann't feed dict with shape (64,32,32) with tensor (?,32,32,1) even after adding channel cololumnd to the data test. \n",
     "\n",
@@ -97,6 +102,7 @@
     "**Test a Model on New Images**\n",
     "\n",
     "Here are five German traffic signs that I found on the web. The following images are the images before and after preprocessing.\n",
+    "\n",
     "![alt text][image1]\n",
     "![alt text][image2]\n",
     "\n",
@@ -158,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   },
   "widgets": {
    "state": {},
