correct images in README

--- a/Write-Up.ipynb
+++ b/Write-Up.ipynb
@@ -1,18 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting README.md\n"
-     ]
-    }
-   ],
    "source": [
     "%%writefile README.md\n",
     "**Traffic Sign Recognition-Project2-Report** \n",
@@ -21,21 +11,21 @@
     "\n",
     "[//]: # (Image References)\n",
     "\n",
-    "[iSoft1]: ./SoftPredict0.png \"ImgSoft0\"\n",
-    "[iSoft2]: ./SoftPredict1.png \"ImgSoft1\"\n",
-    "[iSoft3]: ./SoftPredict2.png \"ImgSoft2\"\n",
-    "[iSoft4]: ./SoftPredict3.png \"ImgSoft3\"\n",
-    "[iSoft5]: ./SoftPredict4.png \"ImgSoft4\"\n",
-    "[iSoft6]: ./SoftPredict5.png \"ImgSoft5\"\n",
-    "[iSoft7]: ./SoftPredict6.png \"ImgSoft6\"\n",
-    "[iSoft8]: ./SoftPredict0.png \"ImgSoft7\"\n",
-    "[image1]:./out_images/testImg.png\n",
-    "[image2]:./out_images/norImgOut.png\n",
-    "[iNorm]: ./normtest.png\n",
-    "[itrain]: ./train.png \n",
-    "[ivalidation]: ./validation.png \n",
-    "[itest]: ./test.png \n",
-    "[iHist]: ./class_histogram_plot.png \n",
+    "[iSoft1]: ./out_images/SoftPredict0.png \"ImgSoft0\"\n",
+    "[iSoft2]: ./out_images/SoftPredict1.png \"ImgSoft1\"\n",
+    "[iSoft3]: ./out_images/SoftPredict2.png \"ImgSoft2\"\n",
+    "[iSoft4]: ./out_images/SoftPredict3.png \"ImgSoft3\"\n",
+    "[iSoft5]: ./out_images/SoftPredict4.png \"ImgSoft4\"\n",
+    "[iSoft6]: ./out_images/SoftPredict5.png \"ImgSoft5\"\n",
+    "[iSoft7]: ./out_images/SoftPredict6.png \"ImgSoft6\"\n",
+    "[iSoft8]: ./out_images/SoftPredict0.png \"ImgSoft7\"\n",
+    "[image1]: ./out_images/testImg.png\n",
+    "[image2]: ./out_images/norImgOut.png\n",
+    "[iNorm]:  ./out_images/normtest.png\n",
+    "[itrain]: ./out_images/train.png \n",
+    "[ivalidation]: ./out_images/validation.png \n",
+    "[itest]: ./out_images/test.png \n",
+    "[iHist]: ./out_images/class_histogram_plot.png \n",
     "\n",
     "\n",
     "**Data Set Summary & Exploration**\n",
